little-bang/docs/grammar.txt
Expr ::= LetExpr
LetExpr ::= let Var = LetExpr in Expr
LetExpr ::= FuncExpr
FuncExpr ::= Pattern -> LetExpr
FuncExpr ::= CondExpr
CondExpr ::= if Expr then Expr else Expr
CondExpr ::= BinaryArithExpr
BinaryArithExpr ::= OnionExpr ArithOp BinaryArithExpr
BinaryArithExpr ::= Expr ; Expr
BinaryArithExpr ::= OnionExpr
OnionExpr ::= ApplExpr & OnionExpr
OnionExpr ::= ApplExpr
ApplExpr ::= PrefixExpr ApplExpr
ApplExpr ::= PrefixExpr
PrefixExpr ::= Label PrefixExpr
PrefixExpr ::= PrimaryExpr
PrimaryExpr ::= Var
PrimaryExpr ::= PrimitiveLiteral
PrimaryExpr ::= ( Expr )
PrimaryExpr ::= ref Expr
PrimaryExpr ::= [ (Expr , )* ]
PrimitiveLiteral ::= EmptyOnion
PrimitiveLiteral ::= Integer

Pattern ::= ConjPattern
ConjPattern ::= PrefixPattern & ConjPattern
ConjPattern ::= PrefixPattern
PrefixPattern ::= Label PrefixPattern
PrefixPattern ::= PrimaryPattern
PrimaryPattern ::= PrimitiveType
PrimaryPattern ::= EmptyOnion
PrimaryPattern ::= Var
PrimaryPattern ::= ( Pattern )
PrimaryPattern ::= [ (Pattern , )* [Pattern ...] ]
